Fixed scrollbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,8 +25,8 @@
     
 }
 
-#contents {
-    margin-top: 50px;
+.contents {
+    max-height: 200px;
 }
 
 
@@ -36,9 +36,7 @@
     height: 2px;
 }
 
-#contents {
-    margin-top: 6vh;
-}
+
 
 
 .img-circle {
@@ -189,7 +187,7 @@ p {
     bottom: 0;
     right: 0;
     left: 0;
-    overflow-y: auto;
+   
     
 /*    width: auto;*/
     
@@ -203,8 +201,10 @@ div.popover-content {
 
 .panel-content {
 /*    max-height: 30vh;    */
-    overflow-y: auto;
+   
 }
+
+
 
 .share-icon {
     float: left;
